2002-04-20  Dietmar Maurer  <dietmar@ximian.com>

	* jit.c (check_inlining): added statistics about inlineing

	* mono.c (usage): new switch --noinline to disable inlining

	* jit.c (mono_analyze_stack): added a check for (this!=NULL) if we
	inline methods (to keep semantics)

	* x86.brg: added constant folding for inegers 

	* emit-x86.c (tree_allocate_regs): handle the special case when
	chain rules need a register.

2002-04-19  Dietmar Maurer  <dietmar@ximian.com>

	* invoke.c (arch_create_native_wrapper): do not save LMF for Strings

	* jit.c (check_inlining): better inlining support

2002-04-19  Dan Lewis  <dihlewis@yahoo.co.uk>
	
	* x86.brg: LDLEN uses max_length instead of bounds[0]
	* jit.c: support for new szarray format

2002-04-18  Dietmar Maurer  <dietmar@ximian.com>

	* jit.c (check_inlining): added inlining support

2002-04-17  Dietmar Maurer  <dietmar@ximian.com>

	* x86.brg: optimized version of castclass and isinst

Wed Apr 17 12:34:56 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* emit-x86.c, invoke.c: track time spent compiling.

Wed Apr 17 10:58:37 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* emit-x86.c, invoke.c: call profile callbacks if needed.
	* jit.c, jit.h, mono.c: add --profile command line option.

2002-04-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* jit.h: included mono/io-layer/io-layer.h to avoid breaking
	compilation under windows when upgrading mingw and w32api to 
	version	1.3 (thanks Dick!).

2002-04-15  Patrik Torstensson <patrik.torstensson@labs2.com>

	* jit.c: changed the array icalls to use full names

2002-04-15  Dietmar Maurer  <dietmar@ximian.com>

	* x86.brg: check the this pointer before calling
	non-virtual functions

	* emit-x86.c (arch_emit_prologue): initialize local vars.

	* x86.brg: removed incredible clumsy code

2002-04-13  Martin Baulig  <martin@gnome.org>

	* debug-dwarf2.c (dwarf2_write_variable_location): New static func to write
	the location of a variable.